Fix button align

--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -4,7 +4,7 @@
 .button-wrapper {
   display: flex;
   flex-direction: row;
-  align-self: flex-end;
+  justify-content: flex-end;
   gap: 8px;
 }
 
@@ -25,8 +25,8 @@ button.long-button {
 }
 
 button.small-button {
-  width: 30px;
-  height: 30px;
+  width: 32px;
+  height: 32px;
 }
 
 button.squared-button {
@@ -45,25 +45,12 @@ button.squared-button {
 
 .contact-edit {
   position: absolute;
-  top: -10px;
+  top: -13px;
   left: 95px;
 }
 
-@keyframes fade {
-  from {
-    opacity: 0;
-  }
+/* Summary */
 
-  to {
-    opacity: 100;
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.summary-edit {
+  align-self: flex-end;
 }
